# clogwench

./: .gitignore  Cargo.toml  README.md
apps/common/: .gitignore  package-lock.json  package.json  tsconfig.json
apps/common/src/: app.ts  generated.ts  index.ts  surface.ts
apps/digital-clock/: Cargo.toml
apps/digital-clock/src/: main.rs
apps/dock/: package-lock.json  package.json  tsconfig.json
apps/dock/src/: app.ts  base_font.json  index.ts  surface.ts  test.js
apps/echo-app/: Cargo.toml
apps/echo-app/src/: main.rs
apps/musicplayer/: package-lock.json  package.json  tsconfig.json
apps/musicplayer/src/: browser.html  browser.ts  index.ts  node.ts
apps/people/: package-lock.json  package.json  tsconfig.json
apps/people/src/: contact_editor.ts  index.ts
apps/textedit/: .gitignore  package-lock.json  package.json  tsconfig.json
apps/textedit/src/: index.ts
audio/: Cargo.toml
audio/src/: audio.rs  lib.rs  output.rs
central/: Cargo.toml
central/src/: main.rs  network.rs  state.rs
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common-wm/: Cargo.toml
common-wm/src/: lib.rs
common/src/: client.rs  events.rs  font.rs  generated.rs  graphics.rs  lib.rs
cool-logger/: Cargo.toml
cool-logger/src/: lib.rs
db/: Cargo.toml  data.json  test_data.json
db/src/: lib.rs
demo-clickgrid/: Cargo.toml
demo-clickgrid/src/: main.rs
demo-moveplayer/: Cargo.toml
demo-moveplayer/src/: main.rs
devtools/: Cargo.toml
devtools/mainmain/: Cargo.toml
devtools/mainmain/src/: main.rs
devtools/runner/: Cargo.toml
devtools/runner/src/: central_conn.rs  headlesswm.rs  main.rs  platwm.rs
devtools/src/: main.rs
digital-clock/src/: main.rs
echo-app/: Cargo.toml
echo-app/src/: main.rs
experiments/zmqclient/: Cargo.toml
experiments/zmqclient/src/: main.rs
experiments/zmqwindow/: Cargo.toml
experiments/zmqwindow/src/: main.rs
gfx/: Cargo.toml
gfx/src/: font.rs  graphics.rs  lib.rs  main.rs
graphics_tests/: Cargo.toml
graphics_tests/src/: main.rs  surf.rs
input/src/: _pick_device.rs  main.rs
linux-wm/: Cargo.toml
linux-wm/src/: input.rs  main.rs  network.rs  surf.rs
minibuf/: Cargo.toml
minibuf/src/: lib.rs
plat/: Cargo.toml
plat/native-linux/: Cargo.toml
plat/native-linux/src/: input.rs  lib.rs  surf.rs
plat/native-macos/: Cargo.toml
plat/native-macos/src/: lib.rs  sdl_to_common.rs
plat/src/: lib.rs
qemu/: run_qemu_x86_64.sh
resources/: cursor.acorn  default-font.json
sdl_util/: Cargo.toml
sdl_util/src/: lib.rs
server/: Cargo.toml
server/src/: cool_bindings.rs  input.rs  main.rs  network.rs  surf.rs
src/: main.rs
test-log/: Cargo.toml
test-log/src/: main.rs
test-server/: Cargo.toml
test-server/src/: main.rs
test-wm/: Cargo.toml
test-wm/src/: inputtests.rs  main.rs
tools/: common.js  install_node.sh  package.json  run_qemu.js  setup.js
tools-input/: Cargo.toml
tools-input/src/: main.rs
tools/docs/: diagram.md  package-lock.json  package.json
tools/docs/src/: build.js
tools/runner/: Cargo.toml  app_list.json  data.json
tools/runner/src/: central_conn.rs  headlesswm.rs  main.rs  platwm.rs
tools/vm/: run_qemu.js
uitoolkit/: Cargo.toml
uitoolkit/toolbar-mock/: Cargo.toml
uitoolkit/toolbar-mock/src/: components.rs  core.rs  main.rs  notes.md  v2try.rs
