[workspace]
resolver = "2"

members = [
    "central",
    "common",
    "db",
    "experiments/zmqclient",
    "experiments/zmqwindow",
    "gfx",
    "plat", "sdl_util",
    "tools/runner",
]

default-members = [
    "central",
    "common",
    "db",
    "gfx",
    "plat",
    "tools/runner",
    "experiments/zmqwindow"
]


[workspace.metadata.scripts]
central-only = "cargo run --bin central -- --database=db/test_data.json"
dev = "cargo run --bin runner -- --wmtype native"
dock = "npm --prefix ../clogwench-apps/dock run dev"
window = "cargo run --bin zmqwindow"

