[package]
name = "drawrects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

common = { path="../common"}
interprocess = "1.1.1"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
rand = "0.8.4"
