[package]
name = "common-wm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path="../common"}
uuid = { version="0.8.2", features=["v4","serde"]}
log = "0.4.14"
env_logger = "0.9.0"
serde = "1.0.133"
serde_json = "1.0.74"
rand = "0.8.4"
