[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
uuid = { version="0.8.2", features=["v4","serde"]}
png = "0.17.2"
