[package]
name = "devtools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path="../common"}
common-wm = { path="../common-wm"}
plat = { path="../plat"}
ctrlc = "3.2.1"
log = "0.4.14"
log4rs = "1.0.0"
env_logger = "0.9.0"
png = "0.17.2"
structopt = "0.3.25"
uuid = { version="0.8.2", features=["v4","serde"]}

