[package]
name = "test2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path="../common"}
common-wm = { path="../common-wm"}
libc = "0.2"
memmap = "0.7.0"
errno = "0.2.8"
framebuffer = "0.3.1"
interprocess = "1.1.1"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
ctrlc = "3.2.1"
evdev = "=0.11.1"
structopt = "0.3.25"
log = "0.4.14"
env_logger = "0.9.0"
uuid = { version="0.8.2", features=["v4","serde"]}
log4rs = "1.0.0"
