[package]
name = "test-wm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path="../common"}
common-wm = { path="../common-wm"}
ctrlc = "3.2.1"
serde = "1.0.133"
serde_json = "1.0.74"
structopt = "0.3.25"
log = "0.4.14"
log4rs = "1.0.0"
env_logger = "0.9.0"
uuid = { version="0.8.2", features=["v4","serde"]}
rand = "0.8.4"

