[package]
name = "native-macos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path="../../common"}
[dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["use-pkgconfig"]
