[package]
name = "native-macos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx = { path= "../../gfx" }
common = { path="../../common"}
uuid = { version="0.8.2", features=["v4","serde"]}
log = "0.4.14"
[dependencies.sdl2]
version = "=0.35.1"
default-features = false
features = ["use-pkgconfig", "unsafe_textures"]
