[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.133"
serde_json = "1.0.74"
common = { path= "../../common" }
common-wm = { path= "../../common-wm" }
cool-logger = { path= "../../cool-logger" }
#plat = { path= "../../plat" }
minibuf = { path= "../../minibuf"}
uuid = { version="0.8.2", features=["v4","serde"]}
log = "0.4.14"
structopt = "0.3.25"
