[package]
name = "toolbar-mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path="../../common"}
uuid = { version="0.8.2", features=["v4","serde"]}
log = "0.4.14"
cool-logger = { path="../../cool-logger"}
